# cf-template-rust

./: README.md  bacon.toml
.github/workflows/: validate-templates.yml
Init/: .gitignore  Cargo.toml  Cyberware.toml  README.md  cargo-generate.toml
Init/config/: quickstart.yml
Init/modules/hello-world/: Cargo.toml
Init/modules/hello-world/src/: config.rs  module.rs
Modules/: cargo-generate.toml
Modules/api-db-handler/: Cargo.toml  README.md  cargo-generate.toml
Modules/api-db-handler/sdk/: Cargo.toml
Modules/api-db-handler/sdk/src/: client.rs
Modules/api-db-handler/sdk/src/odata/: pokemon.rs
Modules/api-db-handler/src/: errors.rs  lib.rs  module.rs
Modules/api-db-handler/src/api/rest/: dto.rs  error.rs
Modules/api-db-handler/src/api/rest/handlers/: mod.rs  pokemon.rs
Modules/api-db-handler/src/api/rest/routes/: mod.rs  pokemon.rs
Modules/api-db-handler/src/domain/: error.rs  mod.rs
Modules/api-db-handler/src/domain/local_client/: client.rs  mod.rs  streaming.rs
Modules/api-db-handler/src/domain/repos/: pokemon_repo.rs
Modules/api-db-handler/src/domain/service/: mod.rs  pokemon.rs
Modules/api-db-handler/src/infra/storage/: mapper.rs  mod.rs  odata_mapper.rs  pokemon_sea_repo.rs
Modules/api-db-handler/src/infra/storage/entity/: pokemon.rs
Modules/api-db-handler/src/infra/storage/migrations/: m20260111_000001_initial.rs
Modules/api-gateway/: Cargo.toml  README.md
Modules/api-gateway/src/: config.rs  lib.rs  module.rs  web.rs
Modules/api-gateway/src/middleware/: mod.rs
Modules/background-worker/: Cargo.toml  README.md
Modules/background-worker/sdk/: Cargo.toml  README.md
Modules/background-worker/sdk/src/: client.rs  errors.rs  lib.rs  models.rs
Modules/background-worker/src/: config.rs  lib.rs  module.rs
Modules/background-worker/src/domain/: error.rs  local_client.rs  ports.rs  service.rs
Modules/background-worker/src/infra/: mod.rs  model.rs
Modules/rest-gateway/: Cargo.toml  README.md
Modules/rest-gateway/src/: lib.rs  module.rs  web.rs
scripts/: validate-templates.sh
