[package]
name = "{{ project-name }}"
version = "0.0.1"
edition = "2024"

[features]
default = ["odata"]
odata = ["{{ project-name }}-sdk/odata"] # enable streaming API with typed queries
sqlite = ["cf-gears-toolkit-db/sqlite"]
postgres = ["cf-gears-toolkit-db/pg"]
mysql = ["cf-gears-toolkit-db/mysql"]

[dependencies]
# Core
anyhow = "1.0"
tracing = "0.1"
{{ project-name }}-sdk = { path = "./sdk" }

# Serde and JSON schema
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.4", features = [
    "macros",
    "openapi_extensions",
    "chrono",
    "uuid",
    "time",
] }

# HTTP and REST
axum = { version = "0.8", features = ["macros"] }
futures-util = "0.3"
http = "1.4"

# Time handling
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }

# UUID support
uuid = { version = "1.23", features = ["serde"] }

# Database - SeaORM
sea-orm = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "with-time",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", default-features = false }

# Error handling
thiserror = "2.0"

# ToolKit
cf-gears-toolkit = { version = "=0.6.10", features = ["db"] }
cf-gears-toolkit-canonical-errors = { version = "=0.7.3" }
cf-gears-toolkit-db = { version = "=0.8.2" }
cf-gears-toolkit-db-macros = { version = "=0.6.2" }
cf-gears-toolkit-security = { version = "=0.7.0" }
cf-gears-toolkit-odata = { version = "=0.8.0", features = ["with-utoipa"] }
cf-gears-toolkit-sdk = { version = "=0.6.5" }
cf-gears-toolkit-macros = { version = "=0.6.2" }
