[package]
name = "{{ project-name }}-sdk"
version = "0.0.1"
edition = "2024"

[features]
default = []
odata = []

[dependencies]
# Core async trait helper exposed by ToolKit
cf-gears-toolkit = { version = "=0.6.10" }

# OData contract and pagination types
cf-gears-toolkit-odata = { version = "=0.8.0" }
cf-gears-toolkit-sdk = { version = "=0.6.5" }
cf-gears-toolkit-odata-macros = { version = "=0.6.5" }

# Data model + errors
thiserror = "2.0"
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.23", features = ["serde"] }

# Streaming trait type alias support
futures-core = "0.3"
